force-app/main/default/objects/Country_Layer__c/Country_Layer__c.object-meta.xml
<CustomObject>
    <label>Country Layer</label>
    <nameField>
        <label>Country Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>