force-app/main/default/objects/Country_Layer__c/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <externalId>true</externalId>
    <label>Alpha 3 Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>