force-app/main/default/objects/Country_Layer__c/fields/Last_Updated_From_API__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_From_API__c</fullName>
    <label>Last Updated From API</label>
    <type>DateTime</type>
</CustomField>