force-app/main/default/objects/Country_Layer__c/fields/RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs__c</fullName>
    <label>Regional Blocs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>